# AutoDNA

./: LICENSE  README.md
AutoDNA-python/: .gitignore  README.md  requirements.txt
Scheduler/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Scheduler/config/: reagents.json
Scheduler/include/common/: dbug_logging.h  logging.h  thread_safe_queue.hpp
Scheduler/include/machine/: check_manager.hpp  common.hpp  equipment.hpp  mac_manager.hpp  machine.hpp  machines.hpp
Scheduler/include/modbus/: client.hpp  common.hpp
Scheduler/include/procedure/: action.hpp  common.hpp  stage.hpp  step.hpp  workflow.hpp
Scheduler/include/process/: amplification.hpp  branch.hpp  dummy.hpp  fluorescence.hpp  forloop.hpp  portage.hpp  purification.hpp
Scheduler/include/process/amplification/: aspirate_mix.hpp  move_carrier.hpp  move_tube.hpp  pcr.hpp
Scheduler/include/process/fluorescence/: aspirate_mix.hpp  captube.hpp  fluo.hpp  move_carrier.hpp  move_tube.hpp  pipette.hpp
Scheduler/include/process/purification/: aspirate_mix.hpp  centrifugal.hpp  centrifuge.hpp  move_carrier.hpp  move_tube.hpp  pcr.hpp  pipette.hpp  shake.hpp  timer.hpp
Scheduler/include/process/refrigerator/: picking.hpp  placement.hpp
Scheduler/include/reality/: reagent.hpp  reality.hpp
Scheduler/include/reality/carrier/: carrier.hpp  chamber_tube_carrier.hpp  pcr_tube_carrier.hpp  strip_tube_carrier.hpp
Scheduler/include/reality/container/: container.hpp  tube.hpp
Scheduler/include/server/: scheduler.hpp  websocket_server.hpp
Scheduler/include/transform/: alloc_machine.hpp  block.hpp  common.hpp  interval.hpp  parser_code.hpp  simulator.hpp  transfer_manager.hpp
Scheduler/src/: main_scheduler.cpp  main_sender.cpp  main_server.cpp
Scheduler/src/machine/: amplification.cpp  check_manager.cpp  fluorescence.cpp  library.cpp  mac_manager.cpp  machine.cpp  machines.cpp  purification.cpp
Scheduler/src/modbus/: client.cpp
Scheduler/src/procedure/: action.cpp  stage.cpp  step.cpp
Scheduler/src/reality/: carrier.cpp  reagent.cpp  reality.cpp  tube.cpp
Scheduler/src/server/: scheduler.cpp
Scheduler/src/transform/: simulator.cpp
UI/: .dockerignore  .eslintrc.js  Dockerfile  README.md  dependencies.txt  next.config.ts  package.json  pnpm-lock.yaml
(+617 files in other folders)
